Fix up scrollbar colors so it's visible in the channel list

--- a/theme.css
+++ b/theme.css
@@ -29,7 +29,15 @@
 }
 
 ::-webkit-scrollbar-thumb:vertical {
-	background: var(--background-light-color);
+	background: hsl(192, 100%, 25%);
+}
+
+::-webkit-scrollbar-thumb:vertical:hover {
+	background: hsl(192, 100%, 30%);
+}
+
+::-webkit-scrollbar-thumb:vertical:active {
+	background: hsl(192, 100%, 40%);
 }
 
 html {
